<resources>
    <string name="app_name">Mom</string>
    <string name="kakao_app_key">4606473b4aec2daadfa87ff2cf730243</string>
    <string name="kakao_scheme">kakao4606473b4aec2daadfa87ff2cf730243</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="facebook_id">1744592645788871</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">WelCome</string>
    <string name="member_join">회원가입</string>
    <string name="member_login">로그인</string>
    <string name="member_btn_facebook">페이스북으로 로그인/가입</string>
    <string name="member_btn_kakao">카카오톡으로 로그인/가입</string>
    <string name="member_btn_email">이메일로 로그인</string>
    <string name="member_text_id">아이디찾기</string>
    <string name="member_text_pw">비밀번호찾기</string>
    <string name="member_googleid">구글아이디 선택(필수 클릭)</string>
    <string name="member_pass">시작하기</string>
<string name="point_alert">포인트 알림</string>
    <string name="preparation">기능 준비 중입니다</string>
    <string name="valid_username">유저명/닉네임을 입력해주세요</string>
    <string name="valid_useremail">이메일 형식이 맞지 않습니다</string>
    <string name="valid_password">비밀번호는 5자이상 입력해주세요</string>
    <string name="valid_user">입력하신 이메일계정 또는 비밀번호를 확인해주세요</string>
    <string name="valid_gmail_req">영상 업로드를 하기 위해서 \n Gmail은 필수 입니다</string>
    <string name="valid_email_req">이메일 아이디는 필수 입니다</string>
    <string name="valid_password_confirm">비밀번호 재입력 값이 다릅니다</string>
    <string name="valid_mission_nodata_found">등록된 미션 스테이지가 존재 하지 않습니다</string>
    <string name="login_success">로그인에 성공 했습니다</string>
    <string name="need_google_auth">구글 사용자 인증이 필요합니다</string>
    <string name="upload_disp">인터넷속도,유투브서버 상황, 업로드 파일용량에 따라 \n 업로드 시간이 달라집니다.</string>
    <string name="network_problem">네트워크가 원활하지 않습니다</string>
    <string name="page_refresh">새로고침</string>
    <string name="app_loging_title">LOGIN</string>
    <string name="app_logout">로그아웃 합니다</string>
    <string name="app_end_action">앱을 종료 하시겠습니까?</string>
    <string name="moreview">더보기</string>
    <string name="donotinternet">인터넷 연결이 해제 되어 있습니다 \n 앱이 정상 작동 하지 않음을 알려드립니다</string>
    <string name="app_myvideo_view">내 영상 보기</string>
    <string name="app_myvideo_view_title">영상 보기</string>
    <string name="mission_toolbar_title">스테이지</string>
    <string name="lifting">리프팅</string>
    <string name="drrible">드리블</string>
    <string name="around">어라운드</string>
    <string name="crossbar">콤플렉스</string>
    <string name="trapping">트래핑</string>
    <string name="flick">플릭</string>
    <string name="non_mission">도전 전</string>
    <string name="mission_start">시작하기</string>
    <string name="mission_open">미션오픈</string>
    <string name="mission_upload">내 영상 업로드</string>
    <string name="mission_upload_start">업로드</string>
    <string name="mission_upload_box1">제목</string>
    <string name="mission_upload_box2">내용</string>
    <string name="upload_pre_title">유저 미션 영상 업로드</string>
    <string name="upload_pre_title_content">미션 영상 업로드를 준비합니다</string>
    <string name="upload_pre">영상을 업로드할 준비가 끝났습니다</string>
    <string name="upload_start">영상 업로드를 시작합니다</string>
    <string name="upload_complate">영상 업로드를 완료 했습니다</string>
    <string name="upload_subject_togle">MomSoccer</string>
    <string name="upload_duplicate_validate">이미 업로드 했던 영상은\n 등록이 불가능 합니다 \n 다른 파일을 업로드 해주세요</string>
    <string name="upload_error">영상 업로드가 실패되었습니다</string>
    <string name="file_upload_progress_title">진행도 : </string>
    <string name="file_upload_progress_content">영상 업로드 진행 상태 정보</string>
    <string name="user_team_yet_join">팀 비소속</string>
    <string name="user_video_like_cancel">관심 영상을 해제 합니다</string>
    <string name="user_video_like_ok">관심 영상으로 등록 합니다</string>
    <string name="user_profile_update">유저정보를 반영 했습니다</string>
    <string name="network_valid_user">회원 검증을 진행하는 중입니다</string>
    <string name="network_join_user">몸 싸커 회원 가입을 진행합니다</string>
    <string name="network_get_user">유저정보를 서버로부터 받고 있습니다</string>
    <string name="network_error_message1">네트워크가 정상적인지 확인 바랍니다. 서버 통신 오류 입니다</string>
    <string name="network_error_isnotsuccessful">앱 통신중 내부 문제가 발생 했습니다. Mom 관리팀에 버그 신고를 해주세요</string>
    <string name="network_updating_user">유저 정보를 업데이트 합니다</string>
    <string name="network_logout_user">안전하게 로그아웃 중입니다</string>
    <string name="network_get_list">서버로부터 정보를 받아 오는 중입니다</string>
    <string name="network_create_comment">댓글을 등록합니다</string>
    <string name="network_create_complete">댓글이 등록 되었습니다 \n댓글 리스트를 갱신 합니다</string>
    <string name="network_nodata_found_user">입력하신 검색어에 맞는 \n유저가 존재하지 않습니다</string>
    <string name="network_nodata_found_coach">입력하신 검색어에 맞는 \n코치가 존재하지 않습니다</string>
    <string name="network_nodata_error">데이터를 불러오는데 실패했습니다 \n 통신 상태를 확인하고 눌러주세요</string>
    <string name="no_mission_noty">미션이 곧 추가 됩니다. 기다려주실꺼죠?~~</string>
    <string name="page_subject_upload">선택하신 영상</string>
    <string name="user_mission_subject">영상제목(40자 까지 입력 가능)</string>
    <string name="user_mission_cotent">영상 내용</string>
    <string name="toolbar_page_mypage">마이페이지</string>
    <string name="toolbar_page_profile">프로파일 편집</string>
    <string name="toolbar_video">미션영상</string>
    <string name="toolbar_board_page">댓글</string>
    <string name="toolbar_search_page">검색</string>
    <string name="toolbar_book_page">관심영상</string>
    <string name="toolbar_favorite_page">즐겨찾기(미션)</string>
    <string name="toolbar_point_page">포인트</string>
    <string name="toolbar_comment_page">댓글</string>
    <string name="toolbar_user_missionview_page">미션영상</string>
    <string name="toolbar_setup">설정 및 관리</string>
    <string name="toolbar_userprofile">프로파일</string>
    <string name="toolbar_feedback_page">피드백요청</string>
    <string name="toolbar_ranking_all">랭킹 전체</string>
    <string name="toolbar_ranking_friend">랭킹 친구</string>
    <string name="toolbar_ranking_team">랭킹 팀</string>
    <string name="toolbar_ranking_allteam">랭킹 팀전체</string>
    <string name="toolbar_ins_page">강사전용</string>
    <string name="toolbar_ins_point_page_title">강사포인트 수입내역</string>
    <string name="toolbar_apply_coach">코치신청</string>
    <string name="toolbar_umission_list_page_title">유저 미션 영상 리스트</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="slide_1_title">첫번째 슬라이딩 화면</string>
    <string name="slide_1_desc">첫번째 콘텐트 설명</string>
    <string name="slide_2_title">두번째 슬라이딩 화면</string>
    <string name="slide_2_desc">두번째 콘텐트 설명</string>
    <string name="slide_3_title">세번째 슬라이딩 화면</string>
    <string name="slide_3_desc">세번째 콘텐트 설명</string>
    <string name="slide_4_title">네번째 슬라이딩 화면</string>
    <string name="slide_4_desc">네번째 콘텐트 설명</string>
    <string name="app_button">수정</string>
    <string name="app_save">저장</string>
    <string name="app_fllow">팔로우</string>
    <string name="app_fllow_cancel">팔로우취소</string>
    <string name="dermy_missionname">가상미션 : 0 스테이지</string>
    <string name="dermy_disp">네트워크 오류로 인해 가상 미션 페이지를 생성 했습니다</string>
    <string name="dermy_precon">가상미션 성공 조건입니다</string>
    <string name="title_activity_mission_main">MissionMainActivity</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="default_mission_level">Lv.10</string>
    <string name="default_mission_name">The mission name</string>
    <string name="default_mission_disp">Mision description</string>
    <string name="default_mission_precon">Mision precondition</string>
    <string name="default_mission_getpoint">When success, get 50 Point</string>
    <string name="default_mission_subject">다른 사람 미션영상(최근 등록 20개)</string>
    <string name="my_mission_subject">내 미션 영상</string>
    <string name="my_mission_feedback_subject">피드백 이력</string>
    <string name="my_mission_feedback_subject1">피드백 이력 비공개 설정</string>
    <string name="point_pre_word">성공시</string>
    <string name="point_upload">업로드시</string>
    <string name="point_get">포인트 획득</string>
    <string name="title_activity_test_grid">TestGridActivity</string>
    <string name="mission_require_point">미션 오픈을 위한 유저소비 포인트(1회)</string>
    <string name="mission_get_upload_score">미션영상업로드시 유저획득 점수(1회)</string>
    <string name="mission_clear_score">미션 클리어시 유저획득 추가점수(1회)</string>
    <string name="mission_clear_point">미션 클리어시 유저획득 포인트(1회)</string>
    <string name="mission_dialg_mission_open">미션에 도전 하시겠습니까?</string>
    <string name="mission_open_message">미션이 정상적으로 오픈 되었습니다</string>
    <string name="mission_open_coach_msg">강사분들은 포인트와 관계 없이 \n 미션 서비스를 이용하실 수 있습니다.</string>
    <string name="user_mission_p">심사중</string>
    <string name="user_mission_n">심사대기중</string>
    <string name="user_mission_y">미션통과</string>
    <string name="user_mission_fail">도전실패</string>
    <string name="user_mission_pass_title">미션심사 상태/이력</string>
    <string name="board_report">신고하기</string>
    <string name="board_private">공지글로 변경</string>
    <string name="board_private_cancel">공지내리기</string>
    <string name="coach_team_hint_bankname">은행명(옵션)</string>
    <string name="coach_team_hint_bankaccount">계좌번호(옵션)</string>
    <string name="coach_team_hint_addres">집주소(옵션)</string>
    <string name="coach_team_hint_teamname">오프라인 운영 축구팀 명(옵션)</string>
    <string name="coach_team_hint_caree1">선수경력(중,고,대)(옵션)</string>
    <string name="coach_team_hint_caree2">선수/대회입상/강사/팀/자격증 경력(옵션)</string>
    <string name="coach_team_hint_caree3">선수/대회입상/강사/팀/자격증 경력(옵션)</string>
    <string name="coach_team_hint_caree4">선수/대회입상/강사/팀/자격증 경력(옵션)</string>
    <string name="coach_team_hint_caree5">선수/대회입상/강사/팀/자격증 경력(옵션)</string>
    <string name="coach_btn_apply">강사지원</string>
    <string name="coach_team_hint_phone">전화번호(*필수)</string>
    <string name="coach_team_hint_age">강사분의 나이(*필수)</string>
    <string name="coach_team_hint_resume">자기소개(*필수)</string>
    <string name="coach_ins_hint_name">강사분 이름(*필수)</string>
    <string name="coach_team_hint_name">강사분이 운영할 팀명(*필수)</string>
    <string name="coach_team_hint_playeryear">선수경력 년수(*필수)</string>
    <string name="coach_team_hint_insyear">강사경력 년수(*필수)</string>
    <string name="coach_page_title_btn">정보수정</string>
    <string name="mom_menu_title_favorite_mission">즐겨찾기(미션)</string>
    <string name="mom_menu_title_interest_video">관심영상</string>
    <string name="mom_menu_title_ulist">제자리스트</string>
    <string name="mom_menu_title_search">유저/강사 검색</string>
    <string name="mom_menu_title_mypage">마이페이지</string>
    <string name="mom_menu_title_coach_apply">강사신청</string>
    <string name="mom_menu_title_setup">설정</string>
    <string name="mom_menu_title_logout">로그아웃</string>
    <string name="mom_menu_title_setup1">포인트설정</string>
    <string name="mom_setting_creator">크레딧/라이센스</string>
    <string name="mom_setting_upload_set">유투부 채널설정 방법</string>
    <string name="mom_setting_upload">영상업로드 설정</string>
    <string name="mom_setting_help">자주하는 질문</string>
    <string name="mom_setting_update">앱 자동업데이트</string>
    <string name="mom_setting_update_alert">앱 자동 업데이트후 알림</string>
    <string name="mom_setting_update_alert_bell">알림벨 설정</string>
    <string name="mom_setting_app_evaluation">앱평가하기</string>
    <string name="mom_setting_app_email">개발팀에게 메일 보내기</string>
    <string name="mom_setting_app_user">개인프로필</string>
    <string name="momboard_modify">글 수정</string>
    <string name="momboard_delete">삭제하기</string>
    <string name="mom_preference_title1">이용약관</string>
    <string name="mom_preference_title2">개인정보 취급방침</string>
    <string name="mom_preference_title3">회사 소개</string>
    <string name="getfind_email_title">이메일 아이디를 입력하세요</string>
    <string name="getfind_email_title2">이메일</string>
    <string name="getfind_email_title3">*해당 이메일로 임시 비밀번호가 전송됩니다\n 1시간 이내에 확인하셔야 정상 처리됩니다.</string>
    <string name="lang">언어설정</string>
    <string name="en_name">영어</string>
    <string name="cn_name">중국어</string>
    <string name="ko_name">한국어</string>
    <string name="momhome">홈</string>
</resources>