<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mn_item_home"
            android:icon="@drawable/side_home"
            android:title="@string/momhome"
            />

        <item
            android:id="@+id/mn_item_teammemberlist"
            android:icon="@drawable/ic_ulist"
            android:title="@string/mom_menu_title_ulist"
            />

        <item
            android:id="@+id/mn_item_favorite"
            android:icon="@drawable/side_feb"
            android:title="@string/mom_menu_title_favorite_mission"
            />

        <item
            android:id="@+id/mn_item_gansim"
            android:icon="@drawable/side_gansim"
            android:title="@string/mom_menu_title_interest_video" />

        <item
            android:id="@+id/mn_item_search"
            android:icon="@drawable/side_search"
            android:title="@string/mom_menu_title_search" />

        <item
            android:id="@+id/mn_item_mypage"
            android:icon="@drawable/side_mypage"
            android:title="@string/mom_menu_title_mypage" />

        <item
            android:id="@+id/mn_item_coachreq"
            android:icon="@drawable/side_coach"
            android:title="@string/mom_menu_title_coach_apply" />

        <item
            android:id="@+id/mn_item_money"
            android:icon="@drawable/ic_monetization_on_white_24dp"
            android:title="@string/mom_menu_title_setup1" />

        <item
            android:id="@+id/mn_item_setup"
            android:icon="@drawable/side_setup"
            android:title="@string/mom_menu_title_setup" />

        <item
            android:id="@+id/mn_item_logout"
            android:icon="@drawable/logout"
            android:title="@string/mom_menu_title_logout"
            />

    </group>

</menu>
