<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <com.mom.soccer.common.MomPreference
            android:key="userprofile"
            android:title="@string/mom_setting_app_user"
            >
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomPreference
            android:key="usingpage"
            android:title="@string/mom_preference_title1">
                     <intent android:targetClass="com.mom.soccer.company.UsingPage"
            android:targetPackage="com.mom.soccer" />
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomPreference
            android:key="usersafe"
            android:title="@string/mom_preference_title2">
                     <intent android:targetClass="com.mom.soccer.company.UserSafe"
            android:targetPackage="com.mom.soccer" />
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomPreference
            android:title="@string/mom_setting_creator">
                     <intent android:targetClass="com.mom.soccer.CreditLicense"
            android:targetPackage="com.mom.soccer" />
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomPreference
            android:title="@string/mom_setting_upload_set">
                     <intent android:targetClass="com.mom.soccer.exception.UploadExceptionActivity"
            android:targetPackage="com.mom.soccer" />
        </com.mom.soccer.common.MomPreference>


        <com.mom.soccer.common.MomPreference
            android:title="@string/mom_setting_upload">
                 <intent android:targetClass="com.mom.soccer.common.SettingVideoUploadActivity"
            android:targetPackage="com.mom.soccer" />
        </com.mom.soccer.common.MomPreference>


        <com.mom.soccer.common.MomPreference
            android:key="keyhelp"
            android:title="@string/mom_setting_help" />

        <com.mom.soccer.common.MomPreference
            android:key="keyMaildev"
            android:title="@string/mom_setting_app_email" >
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:momsoccer@naver.com"
                />
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomPreference
            android:key="keyevaluation"
            android:title="@string/mom_setting_app_evaluation" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.app.soccerveteranv"
                />
        </com.mom.soccer.common.MomPreference>

        <com.mom.soccer.common.MomSwitchPreference
            android:defaultValue="false"
            android:key="autoUpdate"
            android:switchTextOff="OFF"
            android:switchTextOn="ON"
            android:title="@string/mom_setting_update" />

        <com.mom.soccer.common.MomCheckBoxPreference
            android:defaultValue="false"
            android:dependency="autoUpdate"
            android:key="useUpdateNofiti"
            android:title="@string/mom_setting_update_alert" />

        <com.mom.soccer.common.MomRingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="useUpdateNofiti"
            android:key="autoUpdate_ringtone"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:title="@string/mom_setting_update_alert_bell" />
</PreferenceScreen>