<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_momteamname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_momteamname"
                android:hint="@string/coach_team_hint_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_name"
                android:hint="@string/coach_ins_hint_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_age"
                android:hint="@string/coach_team_hint_age"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_playeryear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_playeryear"
                android:hint="@string/coach_team_hint_playeryear"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_insyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_year"
                android:hint="@string/coach_team_hint_insyear"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_phone"
                android:hint="@string/coach_team_hint_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_resume"
                android:hint="@string/coach_team_hint_resume"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_cuteamname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_cuteamname"
                android:hint="@string/coach_team_hint_teamname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_bankname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_bankname"
                android:hint="@string/coach_team_hint_bankname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_bankaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_bankaccount"
                android:hint="@string/coach_team_hint_bankaccount"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_address"
                android:hint="@string/coach_team_hint_addres"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_career1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_career1"
                android:hint="@string/coach_team_hint_caree1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_career2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_career2"
                android:hint="@string/coach_team_hint_caree2"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_career3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_career3"
                android:hint="@string/coach_team_hint_caree3"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_career4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_career4"
                android:hint="@string/coach_team_hint_caree4"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_career5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/TextLabelinput"
            >

            <EditText
                android:id="@+id/ins_career5"
                android:hint="@string/coach_team_hint_caree5"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                />
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btnApply"
            style="@style/btnStylePaprika"
            android:text="@string/coach_btn_apply"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_marginTop="10dp"
            style="@style/btnStylePaprika"
            android:text="@string/coach_page_title_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>