<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mom_color3">

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/getfind_email_title"
        android:textColor="@color/color6"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/find_email"
            android:padding="8dp"
            android:textColor="@color/color6"
            android:textColorHint="@color/color8"
            android:textSize="13sp"
            android:hint="@string/getfind_email_title2"
            android:background="@drawable/xml_gray_lineback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/getfind_email_title3"
        android:textColor="@color/color6"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>